--- a/aboutus.html
+++ b/aboutus.html
@@ -55,7 +55,7 @@
                 <div class="member">
                     <i class="fa-solid fa-user"></i>
                     <h2>Piyush Mahajan</h2>
-                    <strong>Chariman</strong>
+                    <strong>Chairman</strong>
                 </div>
                 <div class="member">
                     <i class="fa-solid fa-user"></i>
